Step 11: Pages and panels

--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -5,3 +5,5 @@ appDescription=Simple walkthrough of app that demonstrates the basics of SAPUI5
 # Hello panel
 showHelloButtonText=Click me!
 helloMsg=Hi {0}
+homePageTitle=UI5 Walkthrough
+helloPanelTitle=Basic example
