--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -7,3 +7,4 @@ showHelloButtonText=Click me!
 helloMsg=Hi {0}
 homePageTitle=UI5 Walkthrough
 helloPanelTitle=Basic example
+openDialogButtonText=Say hello with Dialog
