Step 17: Fragment Callback

--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -8,3 +8,4 @@ helloMsg=Hi {0}
 homePageTitle=UI5 Walkthrough
 helloPanelTitle=Basic example
 openDialogButtonText=Say hello with Dialog
+dialogCloseButtonText=Ok
