Step 19: Aggregation binding

--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -9,3 +9,6 @@ homePageTitle=UI5 Walkthrough
 helloPanelTitle=Basic example
 openDialogButtonText=Say hello with Dialog
 dialogCloseButtonText=Ok
+
+# Invoice List
+invoiceListTitle=Invoices
