Step 22: Custom formatters

--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -12,3 +12,6 @@ dialogCloseButtonText=Ok
 
 # Invoice List
 invoiceListTitle=Invoices
+invoiceStatusA=Open
+invoiceStatusB=In Progress
+invoiceStatusC=Closed
