--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -15,3 +15,7 @@ invoiceListTitle=Invoices
 invoiceStatusA=Open
 invoiceStatusB=In Progress
 invoiceStatusC=Closed
+
+# Invoice details
+detailPageTitle=Walkthrough - Details
+invoiceTitle=Invoice
