--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -19,3 +19,10 @@ invoiceStatusC=Closed
 # Invoice details
 detailPageTitle=Walkthrough - Details
 invoiceTitle=Invoice
+ratingConfirmation=You have rated this product with {0} stars
+
+# Product Rating
+productRatingLabelInitial=Please rate this product
+productRatingLabelIndicator=Your rating: {0} out of {1}
+productRatingLabelFinal=Thank you for your rating!
+productRatingButton=Rate
