--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -15,6 +15,12 @@ invoiceListTitle=Invoices
 invoiceStatusA=Open
 invoiceStatusB=In Progress
 invoiceStatusC=Closed
+columnQuantity=Quantity
+columnName=Name
+columnSupplier=Supplier
+columnStatus=Status
+columnPrice=Price
+
 
 # Invoice details
 detailPageTitle=Walkthrough - Details
