Step 35: Device adaptation

--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -26,6 +26,8 @@ columnPrice=Price
 detailPageTitle=Walkthrough - Details
 invoiceTitle=Invoice
 ratingConfirmation=You have rated this product with {0} stars
+dateTitle=Order date
+quantityTitle=Quantity
 
 # Product Rating
 productRatingLabelInitial=Please rate this product
